# dockerized-lambda

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/: CI.yml  CODEOWNERS
.github/workflows/: CI.yml
app/: main.py
lambda_function/: main.py
tests/: test_main.py
