[tool.poetry]
name = "dockerized-lambda"
version = "0.1.0"
description = ""
authors = ["HarryMWinters <harrymcwinters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
harrpy = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
