[tool.poetry]
name = "dockerized-lambda"
version = "0.1.0"
description = ""
authors = ["HarryMWinters <harrymcwinters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.0"
pytest = "^6.2.2"
pre-commit = "^2.12.0"

[tool.isort]
profile = "black"
force_single_line = "True"
known_first_party = ["lambda"]
known_third_party = []

[tool.pytest.ini_options]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
